@@ -1,3 +1,4 @@
+* #5089: show frame shortly when adding object to clipboard (erikos)
 * #5097: Fix pasting text between activities through the clipboard. (tomeu)
 * #4660: Use improved PS API which streamlines ShareActivity process (smcv)
 
